# api/users.js
@@ -25,7 +25,7 @@ router.get('/:id', async (req, res) => {
   }
 })
 
-router.post('/', async (req, res) => {
+router.post('/create', async (req, res) => {
   const { name } = req.body;
   try {
     await User.create({ name });
